# JobX

./: .env.example  .gitignore  Home.py  PLAN.md  README.md  config.py  main.py  pyproject.toml  requirements.txt
.claude/: settings.json
.streamlit/: config.toml
agents/: analytics.py  autofill.py  company_research.py  contact_finder.py  cover_letter.py  digest.py  hiring_signals.py  interview_prep.py  orchestrator.py  outreach.py  referral_detector.py  resume_tailor.py  salary_intel.py  scorer.py
alembic/: env.py
alembic/versions/: 7606ba12673b_add_outreach_content_column.py  7c9a7a492202_add_job_location_column.py  9f21df31cf47_add_company_research_fields.py
data/: base_resume.docx  base_resume2.docx  resume_parsed.json  scraper_state.json
db/: models.py  session.py
pages/: 1_Jobs.py  2_Pipeline.py  3_Research.py  4_Prep.py  5_Outreach.py  6_Analytics.py  7_Settings.py
tests/: test_analytics.py  test_autofill.py  test_company_research.py  test_contact_finder.py  test_cover_letter.py  test_glassdoor.py  test_hiring_signals.py  test_interview_prep.py  test_leetcode.py  test_levelsfyi.py  test_llm.py  test_outreach.py  test_referral_detector.py  test_resume_parser.py  test_resume_tailor.py  test_salary_intel.py  test_scorer.py  test_scraper.py
tools/: glassdoor.py  gmail_auth.py  leetcode.py  levelsfyi.py  llm.py  scraper.py  search.py  stackshare.py
tools/ats/: greenhouse.py  lever.py
tools/prompts/: analytics_summary.txt  ats_check.txt  company_research.txt  cover_letter.txt  custom_question.txt  gap_analysis.txt  interview_behavioral.txt  (+9 more)
